    are only sent out if the variables in config are defined and
    have a length < 0 (closes: #688344).
  * Use locale independent date format for mail processing and service mail
    generation (closes: #688745).
  * Fix spelling error in /debian/changelog.
  * Fix lintian issue: description-synopsis-starts-with-article, also:
    capitalize first letter in all description synopsis lines.

 -- Don Armstrong <don@debian.org>  Wed, 25 Aug 2010 01:57:38 -0700

debbugs (2.4.2~exp1) experimental; urgency=low

  * Allow (almost) exactly what RFC2822 allows in comments (closes:
    #497144)
  * Fix problem with non-existant /etc/debbugs/config
  * Ditch \r and \n in status fields (closes: #545895)
  * Properly handle source packages when searching by maintainer; use
    package_maintainer instead of the hashes (closes: #556863)
  * Handle \r properly in Debbugs::MIME for PGP signatures
    (closes: #565981). Thanks to Mike Hommey
  * Allow type to be text as well as text/(something not html)
    (closes: #566068). Thanks to Mike Hommey.
  * Fix links to PTS pages for src packages (closes: #566089). Thanks to
    Sandro Tosi.
  * Fix affects for source packages (closes: #563470). Thanks to Charles
    Plessy.
  * Allow tag instead of tags; silently normalize it (closes: #567407).
    Thanks to Martin Krafft.
  * Properly handle Forwarded: at submit@ time (closes: #568020). Thanks
    to Martin Krafft.
  * Fix source package src: urls (closes: #567439). Thanks to Paul Wise.
  * Use package_maintainer to search for packages maintained by a
    maintainer (closes: #556863). Thanks to Yves-Alexis Perez.
  * Linkify CVE reports (closes: #568464). Thanks to Martin Zobel-Helas.
  * Fix noaffects option
  * Allow the default sendmail options to be specified in the config file;
    don't use -obq by default anymore.
  * Add urls to control@ mail footer (Closes: #578822). Thanks to Lars
    Wirzenius
  * Don't RFC1522 escape ", ( and ). (Closes: #588859). Thanks to Glenn